# fermentation-simulator

./: .gitignore  README.MD  pyproject.toml  requirements.txt
backend/src/fermentation_sim/: __init__.py  config.py
backend/src/fermentation_sim/api/: dependencies.py  main.py
backend/src/fermentation_sim/api/routes/: metadata.py  presets.py  simulation.py
backend/src/fermentation_sim/controllers/: pid.py
backend/src/fermentation_sim/data/: microbe_database.py  preset_service.py
backend/src/fermentation_sim/models/: base.py  batch_model.py  c_binding.py  fed_batch_model.py
backend/src/fermentation_sim/services/: simulation_service.py
backend/src/fermentation_sim/utils/: logging_config.py  validation.py
backend/tests/: test_api_simulation.py  test_batch_model.py  test_fed_batch_model.py  test_presets.py
c_core/: makefile
c_core/include/: fermentation_model.h  rk4_solver.h
c_core/src/: fermentation_model.c  rk4_solver.c
fermenv/: pyvenv.cfg
frontend/: index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: app.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/controls/: ControlPanel.jsx  ParameterForm.jsx
frontend/src/components/layout/: AppLayout.jsx
frontend/src/components/visualization/: FermenterAnimation.jsx  TimeSeriesCharts.jsx  VolumeChart.jsx
frontend/src/hooks/: useSimulation.js  useSimulation.test.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/styles/: global.css
