[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fermentation-sim"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "numpy",
    "loguru",
    "python-dotenv",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
